<resources>
    <string name="app_name">Bullyng App</string>
    <string name="question">Cuestionario</string>
    <string name="history">Historias</string>
    <string name="stories">Relatos</string>
    <string name="bullyingType1">Bullying físico:</string>
    <string name="bullyingType2">Bullying psicológico:</string>
    <string name="bullyingType3">Bullying verbal:</string>
    <string name="bullyingType4">Bullying sexual:</string>
    <string name="history1">Ejemplo historia 1</string>
    <string name="history2">Ejemplo historia 2</string>
    <string name="history3">Ejemplo historia 3</string>
    <string name="history4">Ejemplo historia 4</string>
    <string name="history5">Ejemplo historia 5</string>
    <string name="history6">Ejemplo historia 6</string>
    <string name="history7">Ejemplo historia 7</string>
    <string name="history8">Ejemplo historia 8</string>
    <string name="history9">Ejemplo historia 9</string>
    <string name="history10">Ejemplo historia 10</string>
    <string name="history11">Ejemplo historia 11</string>
    <string name="history12">Ejemplo historia 12</string>
    <string name="textHistory1">HT1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a posuere erat, a volutpat leo. Phasellus vulputate pulvinar augue sit amet volutpat. Quisque ut consectetur tellus, eu porta lectus. Pellentesque in ligula id magna malesuada blandit. Curabitur tristique tortor erat, pulvinar consequat nulla aliquam sed. Sed elementum metus at ipsum luctus, imperdiet luctus velit ultricies. Suspendisse facilisis velit eget elit dignissim tempus. Cras pretium congue sollicitudin. Proin sed leo aliquam, convallis tellus eu, tincidunt est.<br /> Proin non pharetra mauris. Mauris malesuada turpis tortor, at maximus mauris vestibulum finibus. Nulla condimentum erat eros, at mollis ipsum fringilla sit amet. Aliquam non enim posuere purus ultricies varius a dictum lectus. Cras eget dui mattis, venenatis odio eu, tempor leo. Donec eleifend porta mi id tempor. Fusce in vestibulum velit. Pellentesque porttitor ornare nunc vulputate efficitur. Duis mi augue, tempus sed lacus eu, efficitur aliquam mauris. Morbi at lacus et orci fringilla bibendum sed eu odio. Nullam non libero vel diam condimentum luctus eget sed turpis. Sed dapibus, velit ut egestas tincidunt, orci ex bibendum eros, a volutpat diam urna in diam. Sed et sodales augue. Sed molestie, nibh a dictum posuere, enim est eleifend magna, ac mattis est quam id eros. Praesent ut est dapibus, volutpat quam quis, tristique neque. Proin faucibus fringilla magna et facilisis.<br />Vivamus posuere hendrerit ex, ac malesuada orci ultrices id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vel ex nec arcu suscipit dignissim. Sed eu bibendum nibh. Vivamus congue nulla leo, quis porta augue tincidunt at. Integer in euismod mauris. Suspendisse diam ex, maximus sed odio sit amet, vehicula sollicitudin magna. Proin eu diam nec ante dictum pretium. Curabitur ac mauris fermentum, aliquet ipsum sed, iaculis nulla.<br />Cras a metus urna. Morbi finibus nisl tellus, vitae dapibus massa mollis ut. Vestibulum sed malesuada orci. Praesent bibendum pharetra convallis. Praesent in sem id nisi elementum lobortis. Pellentesque in faucibus augue. Ut ullamcorper massa sit amet nunc gravida congue. Nulla consequat hendrerit magna, eu iaculis leo porta eget. Nam non ipsum ante. Sed convallis nibh odio, eu fringilla erat tincidunt vitae.<br />Fusce ligula est, bibendum vel auctor non, egestas non tellus. Nulla tincidunt, elit sed cursus consequat, dolor magna cursus leo, non porta urna ante eget augue. Morbi eget ligula non sapien interdum rhoncus vel eu velit. Mauris a metus vel lectus gravida tristique vitae ac ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus semper volutpat tempor. Suspendisse eu condimentum sem. Praesent rutrum auctor tincidunt. Curabitur in magna vitae purus porttitor molestie vel ut tortor. Suspendisse quis neque auctor, viverra lacus in, facilisis dolor.<br />Donec mollis a elit ut tincidunt. Suspendisse eleifend egestas libero ac elementum. Ut accumsan pulvinar tellus, at dignissim magna ultricies a. Suspendisse sagittis mollis lacinia. Proin pellentesque tincidunt mi et fermentum. Sed blandit dapibus rutrum. Nunc ut maximus ex. Praesent dui erat, ullamcorper et tempor ut, viverra nec enim. Donec non erat vitae mi porta finibus. Praesent leo quam, efficitur at dui quis, egestas facilisis augue. Praesent a gravida arcu. In hac habitasse platea dictumst.</string>
    <string name="textHistory2">HT2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a posuere erat, a volutpat leo. Phasellus vulputate pulvinar augue sit amet volutpat. Quisque ut consectetur tellus, eu porta lectus. Pellentesque in ligula id magna malesuada blandit. Curabitur tristique tortor erat, pulvinar consequat nulla aliquam sed. Sed elementum metus at ipsum luctus, imperdiet luctus velit ultricies. Suspendisse facilisis velit eget elit dignissim tempus. Cras pretium congue sollicitudin. Proin sed leo aliquam, convallis tellus eu, tincidunt est.<br /> Proin non pharetra mauris. Mauris malesuada turpis tortor, at maximus mauris vestibulum finibus. Nulla condimentum erat eros, at mollis ipsum fringilla sit amet. Aliquam non enim posuere purus ultricies varius a dictum lectus. Cras eget dui mattis, venenatis odio eu, tempor leo. Donec eleifend porta mi id tempor. Fusce in vestibulum velit. Pellentesque porttitor ornare nunc vulputate efficitur. Duis mi augue, tempus sed lacus eu, efficitur aliquam mauris. Morbi at lacus et orci fringilla bibendum sed eu odio. Nullam non libero vel diam condimentum luctus eget sed turpis. Sed dapibus, velit ut egestas tincidunt, orci ex bibendum eros, a volutpat diam urna in diam. Sed et sodales augue. Sed molestie, nibh a dictum posuere, enim est eleifend magna, ac mattis est quam id eros. Praesent ut est dapibus, volutpat quam quis, tristique neque. Proin faucibus fringilla magna et facilisis.<br />Vivamus posuere hendrerit ex, ac malesuada orci ultrices id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vel ex nec arcu suscipit dignissim. Sed eu bibendum nibh. Vivamus congue nulla leo, quis porta augue tincidunt at. Integer in euismod mauris. Suspendisse diam ex, maximus sed odio sit amet, vehicula sollicitudin magna. Proin eu diam nec ante dictum pretium. Curabitur ac mauris fermentum, aliquet ipsum sed, iaculis nulla.<br />Cras a metus urna. Morbi finibus nisl tellus, vitae dapibus massa mollis ut. Vestibulum sed malesuada orci. Praesent bibendum pharetra convallis. Praesent in sem id nisi elementum lobortis. Pellentesque in faucibus augue. Ut ullamcorper massa sit amet nunc gravida congue. Nulla consequat hendrerit magna, eu iaculis leo porta eget. Nam non ipsum ante. Sed convallis nibh odio, eu fringilla erat tincidunt vitae.<br />Fusce ligula est, bibendum vel auctor non, egestas non tellus. Nulla tincidunt, elit sed cursus consequat, dolor magna cursus leo, non porta urna ante eget augue. Morbi eget ligula non sapien interdum rhoncus vel eu velit. Mauris a metus vel lectus gravida tristique vitae ac ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus semper volutpat tempor. Suspendisse eu condimentum sem. Praesent rutrum auctor tincidunt. Curabitur in magna vitae purus porttitor molestie vel ut tortor. Suspendisse quis neque auctor, viverra lacus in, facilisis dolor.<br />Donec mollis a elit ut tincidunt. Suspendisse eleifend egestas libero ac elementum. Ut accumsan pulvinar tellus, at dignissim magna ultricies a. Suspendisse sagittis mollis lacinia. Proin pellentesque tincidunt mi et fermentum. Sed blandit dapibus rutrum. Nunc ut maximus ex. Praesent dui erat, ullamcorper et tempor ut, viverra nec enim. Donec non erat vitae mi porta finibus. Praesent leo quam, efficitur at dui quis, egestas facilisis augue. Praesent a gravida arcu. In hac habitasse platea dictumst.</string>
    <string name="instruction">Instrucciones:</string>
    <string name="instructionText">Este cuestionario se contestará con una barra desplazadora, la cual medirá la frecuencia con que ocurran los sucesos que se preguntarán a continuación</string>
    <string name="start">Avanzar</string>
    <string name="next">Siguiente</string>
    <string name="titleQuestion15">15Q. Lorem Ipsum</string>
    <string name="never">Nunca</string>
    <string name="sometimes">Aveces</string>
    <string name="ever">Siempre</string>
    <string name="textQuestion15">QT15 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a posuere erat, a volutpat leo. Phasellus vulputate pulvinar augue sit amet volutpat. Quisque ut consectetur tellus, eu porta lectus. Pellentesque in ligula id magna malesuada blandit. Curabitur tristique tortor erat, pulvinar consequat nulla aliquam sed. Sed elementum metus at ipsum luctus, imperdiet luctus velit ultricies. Suspendisse facilisis velit eget elit dignissim tempus. Cras pretium congue sollicitudin. Proin sed leo aliquam, convallis tellus eu, tincidunt est.<br /> Proin non pharetra mauris. Mauris malesuada turpis tortor, at maximus mauris vestibulum finibus. Nulla condimentum erat eros, at mollis ipsum fringilla sit amet. Aliquam non enim posuere purus ultricies varius a dictum lectus. Cras eget dui mattis, venenatis odio eu, tempor leo. Donec eleifend porta mi id tempor. Fusce in vestibulum velit. Pellentesque porttitor ornare nunc vulputate efficitur. Duis mi augue, tempus sed lacus eu, efficitur aliquam mauris. Morbi at lacus et orci fringilla bibendum sed eu odio. Nullam non libero vel diam condimentum luctus eget sed turpis. Sed dapibus, velit ut egestas tincidunt, orci ex bibendum eros, a volutpat diam urna in diam. Sed et sodales augue. Sed molestie, nibh a dictum posuere, enim est eleifend magna, ac mattis est quam id eros. Praesent ut est dapibus, volutpat quam quis, tristique neque. Proin faucibus fringilla magna et facilisis.<br />Vivamus posuere hendrerit ex, ac malesuada orci ultrices id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vel ex nec arcu suscipit dignissim. Sed eu bibendum nibh. Vivamus congue nulla leo, quis porta augue tincidunt at. Integer in euismod mauris. Suspendisse diam ex, maximus sed odio sit amet, vehicula sollicitudin magna. Proin eu diam nec ante dictum pretium. Curabitur ac mauris fermentum, aliquet ipsum sed, iaculis nulla.</string>
    <string name="result">Resultados:</string>
    <string name="kind">Tipo de Bullying</string>
    <string name="percentage">Porcentaje</string>
    <string name="verbal">Verbal</string>
    <string name="psicology">Psicológico</string>
    <string name="Phisyc">Físico</string>
    <string name="social">Social</string>
    <string name="recomendation">Recomendaciones:</string>
</resources>