<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cris.bullyngapp.QuestionActivity"
    android:background="@drawable/fondo_morado">

    <ScrollView
        android:id="@+id/scrollViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:text="@string/titleQuestion15"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPurple"/>

            <TextView
                android:id="@+id/textViewQuestionText"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/azul_fondo"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/textQuestion15"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:progressDrawable="@drawable/progress_bar"
                android:thumb="@drawable/thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/never"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/sometimes"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|right"
                    android:text="@string/ever"
                    android:textColor="#000" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/boton_redondo_verde"
                android:foregroundGravity="center_vertical|center_horizontal|center"
                android:text="@string/next"
                android:textColor="#000" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
