<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cris.bullyngapp.HistoryActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonHistory1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/boton_redondo_verde"
                android:text="@string/history1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonHistory2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_redondo_verde"
                android:text="@string/history2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHistory1" />

            <Button
                android:id="@+id/buttonHistory3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_redondo_verde"
                android:text="@string/history3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHistory1" />

            <Button
                android:id="@+id/buttonHistory4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_redondo_verde"
                android:text="@string/history4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHistory1" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
