<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity"
    android:background="@drawable/fondo_verde">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="16dp"
                android:text="@string/instruction"
                android:textColor="@color/colorPurple"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="207dp"
                tools:layout_editor_absoluteY="115dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/instructionText" />

            <SeekBar
                android:id="@+id/seekBarOption"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorBlue"/>

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/boton_redondo_verde"
                android:foregroundGravity="center_vertical|center_horizontal|center"
                android:text="@string/start" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>